syntax = "proto3";
package messages;

message ProtoMarshaller {
    string thread_id = 1;
    string content = 2;
    int64 sent_at = 3;
}
